# boom-and-zoom

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
dueler/: .gitignore  Cargo.toml  README.md  config.yml
dueler/src/: lib.rs  main.rs
godot/: Board.gd  BoardSquares.gd  GamePiece.gd  GamePiece.tscn  HelloWorld.gdextension  LegalMoveIndicator.gd  LegalMoveIndicator.tscn  PieceHighlight.tscn  Scene.tscn  icon.svg.import  project.godot
godot_binding/: Cargo.toml
godot_binding/src/: lib.rs
players/: Cargo.toml
players/benches/: my_benchmark.rs
players/src/: forward_random.rs  genius.rs  go_fast.rs  heuristic.rs  lib.rs  minmax.rs  naive.rs  random.rs
profile/: Cargo.toml
profile/src/: main.rs
