[package]
name = "baz_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baz_core = { path = "../core" }
baz_dueler = { path = "../dueler" }
baz_players = { path = "../players" }
clap = { version = "4.4.12", features = ["derive"] }
num = "0.4.1"
