[package]
name = "baz_godot_binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
baz_core = { path = "../core" }
baz_players = { path = "../players" }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
num = "0.4.1"
