[package]
name = "baz_players"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baz_core = { path = "../core" }
num = "0.4.1"
rand = "0.8.5"
rayon = "1.8.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false
