[package]
name = "baz_profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baz_core = { path = "../core" }
baz_players = { path = "../players" }
clap = { version = "4.4.8", features = ["derive"] }
flamegraph = "0.6.4"
